--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
     margin: 0px;
 }
 
+body{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/persianafull.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
 header{
     display: flex;
     justify-content: flex-end;
@@ -34,11 +43,12 @@ a {
     color: black;
 }
 
+/*
 body {
     font-family: arial;
     background-size: 160%;
 }
-
+*/
 ul {
     list-style: none;
    
