--- a/style.css
+++ b/style.css
@@ -43,15 +43,8 @@ a {
     color: black;
 }
 
-/*
-body {
-    font-family: arial;
-    background-size: 160%;
-}
-*/
 ul {
     list-style: none;
-   
 }
 
 img {
@@ -71,6 +64,7 @@ nav {
     position: absolute;
     transition: all .5s;
     border-radius: 10px;
+    
 }
 
 input[type="checkbox"]:checked ~ nav
@@ -82,6 +76,7 @@ ul {
     top: 70px;
     position: absolute;
     width: 100%;
+    padding-bottom: 200px;
 }
 
 a {
