ajustes de centralização

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/persianafull.jpg);
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     position: relative;
 }
 
